bin/testsuite/tests/compiler/src/errors/compiler5145.swg
#global testerror "Err0094"

const aa = 0
const b  = Aa
